--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-flask==2.3.3
+Flask==2.3.3
 requests==2.31.0
 beautifulsoup4==4.12.2
 reportlab==4.0.4
 python-dotenv==1.0.0
-flask-cors==4.0.0
+Flask-Cors==4.0.0
 gunicorn==21.2.0
-selenium==4.15.2
-webdriver-manager==4.0.1
 Pillow==10.0.1
-jinja2==3.1.2 
+Jinja2==3.1.2 
